--- a/index.html
+++ b/index.html
@@ -35,6 +35,44 @@
                 <span class="display" id="description"></span> <br>
                 <span class="display" id="wind"></span> mph<br>
                 <span class="display" id="humidity"></span> %<br>
+            </div><br>
+            <h3 class="header3">5-Day Forecast:</h3><br>
+            <div class="card-container">
+                <div class="card">
+                    <span class="dateCard">hi</span><br>
+                    <img class="icon" src=""><br>
+                    <span class="tempCard">hi</span>&deg<br>
+                    <span class="windCard">hi</span> mph<br>
+                    <span class="humidityCard">hi</span> %<br>
+                </div>
+                <div class="card">
+                    <span class="dateCard">hi</span><br>
+                    <img class="icon" src=""><br>
+                    <span class="tempCard">hi</span>&deg<br>
+                    <span class="windCard">hi</span> mph<br>
+                    <span class="humidityCard">hi</span> %<br>
+                </div>
+                <div class="card">
+                    <span class="dateCard">hi</span><br>
+                    <img class="icon" src=""><br>
+                    <span class="tempCard">hi</span>&deg<br>
+                    <span class="windCard">hi</span> mph<br>
+                    <span class="humidityCard">hi</span> %<br>
+                </div>
+                <div class="card">
+                    <span class="dateCard">hi</span><br>
+                    <img class="icon" src=""><br>
+                    <span class="tempCard">hi</span>&deg<br>
+                    <span class="windCard">hi</span> mph<br>
+                    <span class="humidityCard">hi</span> %<br>
+                </div>
+                <div class="card">
+                    <span class="dateCard">hi</span><br>
+                    <img class="icon" src=""><br>
+                    <span class="tempCard">hi</span>&deg<br>
+                    <span class="windCard">hi</span> mph<br>
+                    <span class="humidityCard">hi</span> %<br>
+                </div>
             </div>
         </div>
     </div>
