--- a/index.html
+++ b/index.html
@@ -31,47 +31,52 @@
                 <span id="date"></span>
                 <img class="icon" src="">
                 <br>
-                <span class="display" id="temp"></span>&deg; <br>
+                <span class="display" id="temp"></span><br>
                 <span class="display" id="description"></span> <br>
-                <span class="display" id="wind"></span> mph<br>
-                <span class="display" id="humidity"></span> %<br>
+                <span class="display" id="wind"></span><br>
+                <span class="display" id="humidity"></span><br>
             </div><br>
             <h3 class="header3">5-Day Forecast:</h3><br>
             <div class="card-container">
                 <div class="card">
-                    <span class="dateCard">hi</span><br>
-                    <img class="icon" src=""><br>
-                    <span class="tempCard">hi</span>&deg<br>
-                    <span class="windCard">hi</span> mph<br>
-                    <span class="humidityCard">hi</span> %<br>
+                    <span class="dateCard1"></span><br>
+                    <img class="icon1" src=""><br>
+                    <span class="descCard1"></span><br>
+                    <span class="tempCard1"></span><br>
+                    <span class="windCard1"></span><br>
+                    <span class="humidityCard1"></span><br>
                 </div>
                 <div class="card">
-                    <span class="dateCard">hi</span><br>
-                    <img class="icon" src=""><br>
-                    <span class="tempCard">hi</span>&deg<br>
-                    <span class="windCard">hi</span> mph<br>
-                    <span class="humidityCard">hi</span> %<br>
+                    <span class="dateCard2"></span><br>
+                    <img class="icon2" src=""><br>
+                    <span class="descCard2"></span><br>
+                    <span class="tempCard2"></span><br>
+                    <span class="windCard2"></span><br>
+                    <span class="humidityCard2"></span><br>
                 </div>
                 <div class="card">
-                    <span class="dateCard">hi</span><br>
-                    <img class="icon" src=""><br>
-                    <span class="tempCard">hi</span>&deg<br>
-                    <span class="windCard">hi</span> mph<br>
-                    <span class="humidityCard">hi</span> %<br>
+                    <span class="dateCard3"></span><br>
+                    <img class="icon3" src=""><br>
+                    <span class="descCard3"></span><br>
+                    <span class="tempCard3"></span><br>
+                    <span class="windCard3"></span><br>
+                    <span class="humidityCard3"></span><br>
                 </div>
                 <div class="card">
-                    <span class="dateCard">hi</span><br>
-                    <img class="icon" src=""><br>
-                    <span class="tempCard">hi</span>&deg<br>
-                    <span class="windCard">hi</span> mph<br>
-                    <span class="humidityCard">hi</span> %<br>
+                    <span class="dateCard4"></span><br>
+                    <img class="icon4" src=""><br>
+                    <span class="descCard4"></span><br>
+                    <span class="tempCard4"></span><br>
+                    <span class="windCard4"></span><br>
+                    <span class="humidityCard4"></span><br>
                 </div>
                 <div class="card">
-                    <span class="dateCard">hi</span><br>
-                    <img class="icon" src=""><br>
-                    <span class="tempCard">hi</span>&deg<br>
-                    <span class="windCard">hi</span> mph<br>
-                    <span class="humidityCard">hi</span> %<br>
+                    <span class="dateCard5"></span><br>
+                    <img class="icon5" src=""><br>
+                    <span class="descCard5"></span><br>
+                    <span class="tempCard5"></span><br>
+                    <span class="windCard5"></span><br>
+                    <span class="humidityCard5"></span><br>
                 </div>
             </div>
         </div>
