--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="searchBtn" class="searchBtn"> Search</button>
             <br>
             <hr>
-            <div id="historyItem">hi</div>
+            <div id="historyItem"></div>
         </div>
 
         <div class="right">
