--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <button id="searchBtn" class="searchBtn"> Search</button>
             <br>
             <hr>
-            <div id="historyItem"></div>
+            <div class = "historyBox">
+                <!-- buttons for history search will go here -->
+            </div>
         </div>
 
         <div class="right">
